# qrcodes

./: Cargo.toml
src/: main.rs
